# utf8-decode

./: Cargo.toml  README.md
examples/: file.txt  safe.rs  unsafe.rs
src/: lib.rs  safe.rs
